--- a/packages/base-subgraph/docker-compose.yml
+++ b/packages/base-subgraph/docker-compose.yml
@@ -1,41 +1,38 @@
 services:
   graph-node:
-    image: graphprotocol/graph-node
+    image: graphprotocol/graph-node:latest
     ports:
-      - '8000:8000'
-      - '8001:8001'
-      - '8020:8020'
-      - '8030:8030'
-      - '8040:8040'
-    depends_on:
-      - ipfs
-      - postgres
-    extra_hosts:
-      - host.docker.internal:host-gateway
+      - "8000:8000"  # GraphQL endpoint
+      - "8020:8020"  # Subgraph deployment endpoint
+      - "8030:8030"  # GraphQL WebSocket endpoint
     environment:
+      # PostgreSQL connection
       postgres_host: postgres
-      postgres_user: graph-node
-      postgres_pass: let-me-in
+      postgres_user: postgres
+      postgres_pass: password
       postgres_db: graph-node
-      ipfs: 'ipfs:5001'
-      ethereum: '${NETWORK_NAME:-local}:${NETWORK_RPC:-http://host.docker.internal:8545}'
-      GRAPH_LOG: info
-  ipfs:
-    image: ipfs/go-ipfs:v0.10.0
-    ports:
-      - '5001:5001'
-    volumes:
-      - ./data/ipfs:/data/ipfs
+      # Ethereum networks configuration
+      ethereum: 
+        mainnet: https://mainnet.gateway.tenderly.co/5vrOW3c7szhbvTCPc9WCf6
+        base: https://base.gateway.tenderly.co/5vrOW3c7szhbvTCPc9WCf6
+      # IPFS node
+      ipfs: http://ipfs:5001
+
+      # Optionally, specify any additional networks or settings
+      # e.g., enable_ethereum: "true" (if required)
+
+    depends_on:
+      - postgres
+      - ipfs
+
   postgres:
-    image: postgres
-    ports:
-      - '5432:5432'
-    command: ['postgres', '-cshared_preload_libraries=pg_stat_statements']
+    image: postgres:12
     environment:
-      POSTGRES_USER: graph-node
-      POSTGRES_PASSWORD: let-me-in
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
       POSTGRES_DB: graph-node
-      PGDATA: '/var/lib/postgresql/data'
-      POSTGRES_INITDB_ARGS: '-E UTF8 --locale=C'
-    volumes:
-      - ./data/postgres:/var/lib/postgresql/data
+
+  ipfs:
+    image: ipfs/go-ipfs:latest
+    ports:
+      - "5001:5001"
