fix: hardhat config, broken imports, add new docker compose

--- a/packages/base-subgraph/.env.example
+++ b/packages/base-subgraph/.env.example
@@ -7,3 +7,5 @@ NETWORK_NAME=
 ## For Goerli use https://goerli.infura.io/v3/<your API key>
 ## For local testing leave empty
 NETWORK_RPC=
+
+TENDERLY_API_KEY=""
