--- a/packages/base-subgraph/docker-compose.yml
+++ b/packages/base-subgraph/docker-compose.yml
@@ -5,16 +5,19 @@ services:
       - "8000:8000"  # GraphQL endpoint
       - "8020:8020"  # Subgraph deployment endpoint
       - "8030:8030"  # GraphQL WebSocket endpoint
+      - '8001:8001'
+      - '8040:8040'
+    extra_hosts:
+      - host.docker.internal:host-gateway
     environment:
       # PostgreSQL connection
       postgres_host: postgres
-      postgres_user: postgres
-      postgres_pass: password
+      postgres_user: graph-node
+      postgres_pass: let-me-in
       postgres_db: graph-node
       # Ethereum networks configuration
-      ethereum: 
-        mainnet: https://mainnet.gateway.tenderly.co/5vrOW3c7szhbvTCPc9WCf6
-        base: https://base.gateway.tenderly.co/5vrOW3c7szhbvTCPc9WCf6
+      ethereum: "base:http://host.docker.internal:8545"
+      GRAPH_LOG: info
       # IPFS node
       ipfs: http://ipfs:5001
 
@@ -26,12 +29,19 @@ services:
       - ipfs
 
   postgres:
-    image: postgres:12
+    image: postgres
+    ports:
+      - '5432:5432'
+    command: ['postgres', '-cshared_preload_libraries=pg_stat_statements']
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: graph-node
-
+      PGDATA: '/var/lib/postgresql/data'
+      POSTGRES_INITDB_ARGS: '-E UTF8 --locale=C'
+      GRAPH_POI_ACCESS_TOKEN: 'local-development-token'
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
   ipfs:
     image: ipfs/go-ipfs:latest
     ports:
